[gd_scene load_steps=13 format=3 uid="uid://d3mafculq8h0f"]

[ext_resource type="Script" path="res://Main.gd" id="1_fqivq"]
[ext_resource type="Texture2D" uid="uid://cao3t5bbdnck0" path="res://Assets/Background.png" id="1_kms41"]
[ext_resource type="Script" path="res://Background.gd" id="1_pwawj"]
[ext_resource type="PackedScene" uid="uid://dw3wt2mge47rs" path="res://Coin.tscn" id="3_rj7f5"]
[ext_resource type="Texture2D" uid="uid://dc2lwsglenfxv" path="res://Assets/Player.png" id="4_1cm06"]
[ext_resource type="Script" path="res://Player.gd" id="4_80lwt"]
[ext_resource type="FontFile" uid="uid://phsu21dyolkp" path="res://Assets/kenvector_future.ttf" id="6_o77hj"]
[ext_resource type="PackedScene" uid="uid://c2v7y2jxsk28e" path="res://Obstacle.tscn" id="7_8i31s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hcfo5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_27lj5"]
size = Vector2(1600, 20)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0kdgc"]
bg_color = Color(0, 0.137715, 0.165931, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ldgni"]
bg_color = Color(0, 0.722326, 0.286022, 1)

[node name="Main" type="Node"]
script = ExtResource("1_fqivq")
obstacle = ExtResource("7_8i31s")
coin = ExtResource("3_rj7f5")

[node name="SpawnerTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="CoinTimer" type="Timer" parent="."]
wait_time = 1.125
autostart = true

[node name="Background" type="Node2D" parent="." groups=["DynamicObject"]]
position = Vector2(0, 480)
scale = Vector2(2, 2)
script = ExtResource("1_pwawj")

[node name="Background" type="Sprite2D" parent="Background"]
position = Vector2(400, 0)
texture = ExtResource("1_kms41")

[node name="Background2" type="Sprite2D" parent="Background"]
position = Vector2(1200, 0)
texture = ExtResource("1_kms41")

[node name="Player" type="RigidBody2D" parent="."]
position = Vector2(180, 480)
scale = Vector2(0.800191, 0.800191)
mass = 2.2
gravity_scale = 1.6
continuous_cd = 1
script = ExtResource("4_80lwt")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(1.50361, 1.50361)
texture = ExtResource("4_1cm06")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
scale = Vector2(4.44952, 4.44952)
shape = SubResource("CircleShape2D_hcfo5")

[node name="Walls" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Walls"]
position = Vector2(800, 76)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D"]
shape = SubResource("RectangleShape2D_27lj5")

[node name="StaticBody2D2" type="StaticBody2D" parent="Walls"]
position = Vector2(800, 0)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls/StaticBody2D2"]
position = Vector2(0, 960)
shape = SubResource("RectangleShape2D_27lj5")

[node name="UI" type="Control" parent="."]
z_index = 5
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 1560.0
offset_bottom = 68.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_0kdgc")
theme_override_styles/fill = SubResource("StyleBoxFlat_ldgni")
value = 100.0
show_percentage = false

[node name="ScoreLabel" type="Label" parent="UI/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_o77hj")
theme_override_font_sizes/font_size = 60
text = "0"

[connection signal="timeout" from="SpawnerTimer" to="." method="_on_spawner_timer_timeout"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_coin_timer_timeout"]
